syntax = "proto3";

package com.susu.dfs.common.proto;

option java_multiple_files = true;
option java_package = "com.susu.dfs.common.model";

import "common.proto";

/**
 *  节点信息
 */
message StorageNode {
  string hostname = 1;
  int32 port = 2;
  int32 httpPort = 3;
}


/**
 *   客户端注册信息
 */
message RegisterRequest {
  string name = 1;
  string hostname = 2;
  int32 port = 3;
  int32 httpPort = 4;
  int64 storedDataSize = 5;
  int64 freeSpace = 6;
  int64 nodeId = 7;
}

message RegisterResponse {
  int64 clientId = 1;
  bool isSuccess = 2;
  string hostname = 3;
}
/**
 *  客户端上报自身存储信息
 */
message ReportStorageInfoRequest {
  string hostname = 1;
  repeated FileMetaInfo fileInfos = 2;
  bool finished = 3;
}

message FileMetaInfo {
  string filename = 1;
  int64 fileSize = 2;
}

/**
 *  客户端心跳
 *  @param isSuccess 心跳是否发送成功
 */
message HeartbeatRequest {
  string hostname = 1;
}

message HeartbeatResponse {
  bool isSuccess = 1;
  repeated NetPacketCommand commands = 2;
}

/**
 *  Client 上传文件完成，向Tracker上报信息
 */
message UploadCompletionRequest {
  string hostname = 1;
  string filename = 2;
  int64 fileSize = 3;
}

/**
 *  Client 删除文件完成，向Tracker上报信息
 */
message RemoveCompletionRequest {
  string hostname = 1;
  string filename = 2;
  int64 fileSize = 3;
}